# serializer version: 1
# name: TestPromptSnapshots.test_categorize_batch_prompt
  '''
  
  You are a culinary classifier. The user has just added these tags to their taxonomy:
  - Cuisine: "American", "British", "French", "Italian"
  - Meal Type: "Breakfast", "Dessert", "Dinner", "Bread"
  
  For EACH recipe below, list which of the tags above it belongs under. Rules:
  - Use ONLY tags from the list above, spelled exactly. Never invent a tag.
  - Return an empty list when none fits.
  - Return one result per recipe id, in any order.
  
  TAGGING RULES:
  - A tag must be true of the dish as a whole, not of one ingredient in it or one step in making it.
  - The test for every tag: would a cook browsing that tag expect to find this recipe there? If not, leave it off.
    * An ingredient that binds, enriches, seasons, garnishes, or makes the stock or sauce does not make
      the dish about that ingredient: eggs in a dough, chicken stock in a soup, butter in a sauce.
    * A step on the way does not name how the dish is cooked: browning meat before braising it,
      boiling pasta before baking it.
    * The same test leaves off a tag the whole dish fails: a soup made with chicken stock is not meat-free.
  - Usually one tag per axis. Choose a second only when the dish belongs equally under both.
  - Prefer no tag to a doubtful one. Many recipes match nothing on an axis; return [] for it.
  - A tag listed as "A" (under "B") is a kind of B. Choose the most specific tag that fits,
    never together with a tag it is under.
  
  RECIPES:
  RECIPE ID: r1
  TITLE: Lasagne
  INGREDIENTS:
    - pasta
  DIRECTIONS:
    1. Bake.
  
  '''
# ---
# name: TestPromptSnapshots.test_classify_prompt
  '''
  You are a grocery shopping classifier. For each ingredient below, say what a shopper buys for it.
  
  Rules:
  - "food" names what a shopper buys, singular and lower case ("egg", not "Eggs").
  - Reuse a food from KNOWN FOODS when the ingredient is the same thing, spelled exactly as the known food is.
  - Keep a variety only when it changes what is bought: "red onion" stays "red onion"; "diced onion" is "onion"; "free-range eggs" is "egg".
  - "aisle" is the store aisle the food is found in, one of: produce, meat_fish, dairy_eggs, bakery, dry_goods, spices, condiments, tins_jars, frozen, drinks, household, other.
  - "pantry" is true for what a typical home kitchen keeps in stock (salt, oil, flour, dried spices).
  - "count" is how many whole units a shopper buys for this ingredient (2.2 onion, 0.3 head garlic, 1 tin). When "count" is set, "count_unit" names what is counted: the food itself, singular ("onion", "egg"), or how it is bought ("tin", "head", "bunch") - never a cooking measure ("cup", "tbsp"). Use null for both "count" and "count_unit" when the food is bought by weight or volume (flour, milk, mince).
  - Answer every ingredient by its "key", each exactly once.
  
  KNOWN FOODS:
  ["flour"]
  
  INGREDIENTS:
  {"key": "r1:i1", "text": "2 cups plain flour", "name": "plain flour", "amount": 2.0, "unit": "cup"}
  {"key": "r1:i2", "text": "salt to taste", "name": "salt", "amount": null, "unit": null}
  
  '''
# ---
# name: TestPromptSnapshots.test_extract_prompt[extract]
  '''
  
  You are a culinary data extractor. Review the following text from an EPUB recipe book.
  Extract ALL distinct recipes found in the text.
  
  Rules:
  - If you see a [HERO IMAGE: filename.jpg] marker, ALWAYS use that filename as
    photo_filename — it is the confirmed finished-dish photo for this recipe.
  - Otherwise, if you see [IMAGE: filename.jpg] markers, assign exactly ONE filename
    to photo_filename: the image most likely to be the hero/finished-dish photo.
    The hero image can appear in any of these positions:
      a) immediately BEFORE the recipe title or ingredient list, OR
      b) immediately AFTER the last ingredient and BEFORE the first method step.
    Both positions are common depending on the book's layout.
    IGNORE images that appear embedded WITHIN the numbered method steps — those are
    instructional process shots, not the finished dish.
    If there is only one [IMAGE:] marker in the recipe, use it unless it is clearly
    mid-method (e.g. appears after "Step 2" or "Step 3" text).
    If no hero image is identifiable, leave photo_filename null.
  - Copy every ingredient line exactly as the text writes it: the same numbers, the same units,
    every measure the line gives, in the same order. Never convert, round, drop or add a measure.
    The one change allowed: write unicode fractions (½, ¼, ¾, etc.) as plain text (1/2, 1/4, 3/4, etc.).
  - If a recipe uses multiple phases, stages, or days (e.g. "PHASE 1 / PHASE 2",
    "Day 1 / Day 2", "Soaker / Final Dough"), preserve ALL phases in full.
    Insert the phase label as a bold heading entry using Markdown bold syntax, e.g.:
      ingredients: ["**Phase 1**", "28g whole wheat flour", "28g pineapple juice",
                    "**Phase 2**", "56g whole wheat flour", "56g water"]
      directions:  ["**Phase 1**", "Mix flour and juice.", "**Phase 2**", "Add remaining flour."]
    The bold label must be its own separate list item, followed by that phase's
    ingredients or steps as normal list items.
    Do NOT flatten, merge, or skip any phase — the reader must follow them in order.
  - If a field is entirely absent from the text, leave it null.
  - stated_source is the publication or book as the text names itself; byline is the author's
    name if one is printed. Never the name of a model or a tool. Leave both null if the text
    does not say.
  - total_time: the recipe's stated total or overall time, only when the text states one.
    Never add prep and cook together.
  - description: the headnote or introduction printed with the recipe, in its own words, at
    most one paragraph. null when there is none.
  - nutritional_info: the recipe's nutrition statement, verbatim, as one line. null when the
    text carries none.
  - Do not invent or infer values that are not present in the text.
  
  Text chunk:
  PLACEHOLDER CHUNK BODY — fixed text so the snapshot only moves when the template does.
  
  '''
# ---
# name: TestPromptSnapshots.test_plain_text_prompt
  '''
  
  You are a culinary data extractor. The following text is a recipe. Extract it.
  
  Rules:
  - Extract the recipe title, servings, prep time, cook time, ingredients, and directions.
  - Ingredients: one item per list entry, copied exactly as the text writes it: the same numbers,
    the same units, every measure the line gives, in the same order. Never convert, round, drop or
    add a measure. The one change allowed: write unicode fractions (½, ¼, ¾) as plain text (1/2, 1/4, 3/4).
  - Directions: one step per list entry.
  - If a field is absent from the text, leave it null.
  - stated_source is the publication or book as the text names itself; byline is the author's
    name if one is printed. Never the name of a model or a tool. Leave both null if the text
    does not say.
  - total_time: the recipe's stated total or overall time, only when the text states one.
    Never add prep and cook together.
  - description: the headnote or introduction printed with the recipe, in its own words, at
    most one paragraph. null when there is none.
  - nutritional_info: the recipe's nutrition statement, verbatim, as one line. null when the
    text carries none.
  - Do not invent or infer values not present in the text.
  - photo_filename: always null (no images in plain text).
  
  Text:
  PLACEHOLDER CHUNK BODY — fixed text so the snapshot only moves when the template does.
  
  '''
# ---
# name: TestPromptSnapshots.test_refine_prompt_with_a_host
  '''
  
  You are a culinary data refiner. Transform this raw recipe into the structured Cayenne format.
  
  RULES:
  1. STRUCTURED INGREDIENTS:
     - Assign each ingredient a unique ID (ing_01, ing_02, etc.).
     - Extract numeric "amount", "unit" (null if unitless), and "name".
     - "fallback_string" is the original full line, unchanged.
     - "line_index" is the 0-based position of the source line in the RAW RECIPE
       ingredients list. Every ingredient line gets exactly one entry with its
       index. A section header line (e.g. "For the sauce:") gets no entry.
     - STATE: for every ingredient with an amount and a volume or weight unit, say whether it is
       "liquid" - pourable as the recipe uses it: water, milk, cream, stock, oil, wine, juice,
       vinegar, honey, syrup, melted butter - or "solid" - everything else, including flour,
       sugar, salt, cold butter, chopped vegetables and meat. Put it in "state". Leave "state"
       null when the line has no amount or its unit is neither a volume nor a weight.
       Use the state when you compute the conversion below.
     - DUAL MEASURES: when a line states two measures ("1 cup (240 g) flour", "250g/2 cups flour",
       "1 ounce (about 1/3 packed cup) grated pecorino"), the FIRST measure the writer gives is
       "amount" and "unit". When the second is the other kind (a weight beside a volume, or a volume
       beside a weight), put it in "converted_amount" and "converted_unit" exactly as the line writes
       it and set "is_ai_converted" to false. When both are the same kind ("1 pound (450g)"), the
       second is not structured: apply the CONVERSION rule below.
     - CONVERSION: for a line with one measure, give the equivalent in the OTHER measure, in grams or
       millilitres only: a weight for a volume ("1 cup" flour -> 120, "g"), a volume for a weight
       ("150 g" flour -> 300, "ml"). Never answer in cups, spoons, ounces or pints. Put it in
       "converted_amount" and "converted_unit" and set "is_ai_converted" to true. Leave
       "converted_amount" and "converted_unit" null and "is_ai_converted" false when the line
       states no amount ("salt to taste") or its unit is neither a volume nor a weight ("3 eggs",
       "a pinch").
       Sizes for older British measures: gill = 142 ml (a US gill = 118 ml); teacup = 142 ml; breakfast cup = 227 ml; dessertspoon = 10 ml; stone = 14 lb; dram = 1/16 oz (a weight).
     - Never change a number or a unit the line writes: "amount" and "unit" are the line's own.
     - amount: the numeric quantity. Use null - never 0 - when the source states no
       amount ("salt to taste", "a pinch of nutmeg"). A zero would be read as a real
       measurement of nothing.
  
  2. TOKENIZED DIRECTIONS:
     - Rewrite directions using Fat Tokens: {{ingredient_id|original_text}}
     - Example: "Mix the flour" -> "Mix the {{ing_01|flour}}"
  
  3. PHASES:
     - If the raw recipe groups its ingredients or directions into phases,
       stages, or days (a bold heading entry such as "**Phase 1**", "**Day 1**",
       "**Soaker**"), keep every one of those headings as its own entry, in
       place, in both lists.
     - A heading is not an ingredient: give it no amount, no unit, and no fat
       tokens. Carry the heading text through as the entry's fallback_string
       (ingredients) or text (directions).
     - Do NOT flatten, merge, renumber, or drop a phase. The reader must still
       be able to tell where one session ends and the next begins.
  
  4. SOURCE SYSTEM:
     - "source_uom_system_detected": the measuring system the writer used, exactly one of "US",
       "UK", "EU", "AU", "Imperial", judged only from evidence in the RAW RECIPE or the SOURCE HOST:
         * a size the recipe states for a unit: "1 cup (240 ml)" or "(237 ml)" is US; "1 cup (250 ml)"
           is a metric cup (UK, EU or AU); "1 tbsp (20 ml)" is AU; "1 pint (568 ml)" or a 20 fl oz
           pint is Imperial;
         * the pre-metric British measures: "breakfast cup", "teacup" or "stone" as a measure, or "gill" when nothing points to the US, is Imperial; "dessertspoon" alone is not evidence (modern UK and Australian recipes still use it);
         * a statement about the measures ("Australian standard measures", "US cup measures");
         * the SOURCE HOST: .co.uk is UK, .com.au is AU, .co.nz is UK (New Zealand's measures are UK
           Metric's);
         * spelling and ingredient names only one country uses ("caster sugar", "plain flour" and
           "double cream" are UK; "all-purpose flour" and "heavy cream" are US).
       Grams printed beside cups are not evidence: American writers print them too.
     - "source_uom_system_evidence": the words you relied on, quoted exactly from the RAW RECIPE, or
       the SOURCE HOST exactly as given. One short quote.
     - Leave both null when nothing above applies.
  
  5. CATEGORIZATION (grid_categories):
     Classify this recipe using the user's taxonomy axes below, by the TAGGING RULES. NEVER invent tags outside the provided lists.
     TAGGING RULES:
     - A tag must be true of the dish as a whole, not of one ingredient in it or one step in making it.
     - The test for every tag: would a cook browsing that tag expect to find this recipe there? If not, leave it off.
       * An ingredient that binds, enriches, seasons, garnishes, or makes the stock or sauce does not make
         the dish about that ingredient: eggs in a dough, chicken stock in a soup, butter in a sauce.
       * A step on the way does not name how the dish is cooked: browning meat before braising it,
         boiling pasta before baking it.
       * The same test leaves off a tag the whole dish fails: a soup made with chicken stock is not meat-free.
     - Usually one tag per axis. Choose a second only when the dish belongs equally under both.
     - Prefer no tag to a doubtful one. Many recipes match nothing on an axis; return [] for it.
     - A tag listed as "A" (under "B") is a kind of B. Choose the most specific tag that fits,
       never together with a tag it is under.
     AXES:
     - Cuisine: ["American", "British", "French", "Italian"]
     - Meal Type: ["Breakfast", "Dessert", "Dinner", "Bread"]
  SOURCE HOST: taste.com.au
  
  RAW RECIPE:
  name='Placeholder Cake' photo_filename='cake.jpg' servings='8' prep_time='20 mins' cook_time='35 mins' ingredients=['2 cups/250g plain flour', '1 cup sugar'] directions=['Mix everything.', 'Bake until done.'] notes=None categories=['EPUB Imports']
  
  '''
# ---
# name: TestPromptSnapshots.test_refine_prompt_with_axes
  '''
  
  You are a culinary data refiner. Transform this raw recipe into the structured Cayenne format.
  
  RULES:
  1. STRUCTURED INGREDIENTS:
     - Assign each ingredient a unique ID (ing_01, ing_02, etc.).
     - Extract numeric "amount", "unit" (null if unitless), and "name".
     - "fallback_string" is the original full line, unchanged.
     - "line_index" is the 0-based position of the source line in the RAW RECIPE
       ingredients list. Every ingredient line gets exactly one entry with its
       index. A section header line (e.g. "For the sauce:") gets no entry.
     - STATE: for every ingredient with an amount and a volume or weight unit, say whether it is
       "liquid" - pourable as the recipe uses it: water, milk, cream, stock, oil, wine, juice,
       vinegar, honey, syrup, melted butter - or "solid" - everything else, including flour,
       sugar, salt, cold butter, chopped vegetables and meat. Put it in "state". Leave "state"
       null when the line has no amount or its unit is neither a volume nor a weight.
       Use the state when you compute the conversion below.
     - DUAL MEASURES: when a line states two measures ("1 cup (240 g) flour", "250g/2 cups flour",
       "1 ounce (about 1/3 packed cup) grated pecorino"), the FIRST measure the writer gives is
       "amount" and "unit". When the second is the other kind (a weight beside a volume, or a volume
       beside a weight), put it in "converted_amount" and "converted_unit" exactly as the line writes
       it and set "is_ai_converted" to false. When both are the same kind ("1 pound (450g)"), the
       second is not structured: apply the CONVERSION rule below.
     - CONVERSION: for a line with one measure, give the equivalent in the OTHER measure, in grams or
       millilitres only: a weight for a volume ("1 cup" flour -> 120, "g"), a volume for a weight
       ("150 g" flour -> 300, "ml"). Never answer in cups, spoons, ounces or pints. Put it in
       "converted_amount" and "converted_unit" and set "is_ai_converted" to true. Leave
       "converted_amount" and "converted_unit" null and "is_ai_converted" false when the line
       states no amount ("salt to taste") or its unit is neither a volume nor a weight ("3 eggs",
       "a pinch").
       Sizes for older British measures: gill = 142 ml (a US gill = 118 ml); teacup = 142 ml; breakfast cup = 227 ml; dessertspoon = 10 ml; stone = 14 lb; dram = 1/16 oz (a weight).
     - Never change a number or a unit the line writes: "amount" and "unit" are the line's own.
     - amount: the numeric quantity. Use null - never 0 - when the source states no
       amount ("salt to taste", "a pinch of nutmeg"). A zero would be read as a real
       measurement of nothing.
  
  2. TOKENIZED DIRECTIONS:
     - Rewrite directions using Fat Tokens: {{ingredient_id|original_text}}
     - Example: "Mix the flour" -> "Mix the {{ing_01|flour}}"
  
  3. PHASES:
     - If the raw recipe groups its ingredients or directions into phases,
       stages, or days (a bold heading entry such as "**Phase 1**", "**Day 1**",
       "**Soaker**"), keep every one of those headings as its own entry, in
       place, in both lists.
     - A heading is not an ingredient: give it no amount, no unit, and no fat
       tokens. Carry the heading text through as the entry's fallback_string
       (ingredients) or text (directions).
     - Do NOT flatten, merge, renumber, or drop a phase. The reader must still
       be able to tell where one session ends and the next begins.
  
  4. SOURCE SYSTEM:
     - "source_uom_system_detected": the measuring system the writer used, exactly one of "US",
       "UK", "EU", "AU", "Imperial", judged only from evidence in the RAW RECIPE or the SOURCE HOST:
         * a size the recipe states for a unit: "1 cup (240 ml)" or "(237 ml)" is US; "1 cup (250 ml)"
           is a metric cup (UK, EU or AU); "1 tbsp (20 ml)" is AU; "1 pint (568 ml)" or a 20 fl oz
           pint is Imperial;
         * the pre-metric British measures: "breakfast cup", "teacup" or "stone" as a measure, or "gill" when nothing points to the US, is Imperial; "dessertspoon" alone is not evidence (modern UK and Australian recipes still use it);
         * a statement about the measures ("Australian standard measures", "US cup measures");
         * the SOURCE HOST: .co.uk is UK, .com.au is AU, .co.nz is UK (New Zealand's measures are UK
           Metric's);
         * spelling and ingredient names only one country uses ("caster sugar", "plain flour" and
           "double cream" are UK; "all-purpose flour" and "heavy cream" are US).
       Grams printed beside cups are not evidence: American writers print them too.
     - "source_uom_system_evidence": the words you relied on, quoted exactly from the RAW RECIPE, or
       the SOURCE HOST exactly as given. One short quote.
     - Leave both null when nothing above applies.
  
  5. CATEGORIZATION (grid_categories):
     Classify this recipe using the user's taxonomy axes below, by the TAGGING RULES. NEVER invent tags outside the provided lists.
     TAGGING RULES:
     - A tag must be true of the dish as a whole, not of one ingredient in it or one step in making it.
     - The test for every tag: would a cook browsing that tag expect to find this recipe there? If not, leave it off.
       * An ingredient that binds, enriches, seasons, garnishes, or makes the stock or sauce does not make
         the dish about that ingredient: eggs in a dough, chicken stock in a soup, butter in a sauce.
       * A step on the way does not name how the dish is cooked: browning meat before braising it,
         boiling pasta before baking it.
       * The same test leaves off a tag the whole dish fails: a soup made with chicken stock is not meat-free.
     - Usually one tag per axis. Choose a second only when the dish belongs equally under both.
     - Prefer no tag to a doubtful one. Many recipes match nothing on an axis; return [] for it.
     - A tag listed as "A" (under "B") is a kind of B. Choose the most specific tag that fits,
       never together with a tag it is under.
     AXES:
     - Cuisine: ["American", "British", "French", "Italian"]
     - Meal Type: ["Breakfast", "Dessert", "Dinner", "Bread"]
  SOURCE HOST: none
  
  RAW RECIPE:
  name='Placeholder Cake' photo_filename='cake.jpg' servings='8' prep_time='20 mins' cook_time='35 mins' ingredients=['2 cups/250g plain flour', '1 cup sugar'] directions=['Mix everything.', 'Bake until done.'] notes=None categories=['EPUB Imports']
  
  '''
# ---
# name: TestPromptSnapshots.test_refine_prompt_without_axes
  '''
  
  You are a culinary data refiner. Transform this raw recipe into the structured Cayenne format.
  
  RULES:
  1. STRUCTURED INGREDIENTS:
     - Assign each ingredient a unique ID (ing_01, ing_02, etc.).
     - Extract numeric "amount", "unit" (null if unitless), and "name".
     - "fallback_string" is the original full line, unchanged.
     - "line_index" is the 0-based position of the source line in the RAW RECIPE
       ingredients list. Every ingredient line gets exactly one entry with its
       index. A section header line (e.g. "For the sauce:") gets no entry.
     - STATE: for every ingredient with an amount and a volume or weight unit, say whether it is
       "liquid" - pourable as the recipe uses it: water, milk, cream, stock, oil, wine, juice,
       vinegar, honey, syrup, melted butter - or "solid" - everything else, including flour,
       sugar, salt, cold butter, chopped vegetables and meat. Put it in "state". Leave "state"
       null when the line has no amount or its unit is neither a volume nor a weight.
       Use the state when you compute the conversion below.
     - DUAL MEASURES: when a line states two measures ("1 cup (240 g) flour", "250g/2 cups flour",
       "1 ounce (about 1/3 packed cup) grated pecorino"), the FIRST measure the writer gives is
       "amount" and "unit". When the second is the other kind (a weight beside a volume, or a volume
       beside a weight), put it in "converted_amount" and "converted_unit" exactly as the line writes
       it and set "is_ai_converted" to false. When both are the same kind ("1 pound (450g)"), the
       second is not structured: apply the CONVERSION rule below.
     - CONVERSION: for a line with one measure, give the equivalent in the OTHER measure, in grams or
       millilitres only: a weight for a volume ("1 cup" flour -> 120, "g"), a volume for a weight
       ("150 g" flour -> 300, "ml"). Never answer in cups, spoons, ounces or pints. Put it in
       "converted_amount" and "converted_unit" and set "is_ai_converted" to true. Leave
       "converted_amount" and "converted_unit" null and "is_ai_converted" false when the line
       states no amount ("salt to taste") or its unit is neither a volume nor a weight ("3 eggs",
       "a pinch").
       Sizes for older British measures: gill = 142 ml (a US gill = 118 ml); teacup = 142 ml; breakfast cup = 227 ml; dessertspoon = 10 ml; stone = 14 lb; dram = 1/16 oz (a weight).
     - Never change a number or a unit the line writes: "amount" and "unit" are the line's own.
     - amount: the numeric quantity. Use null - never 0 - when the source states no
       amount ("salt to taste", "a pinch of nutmeg"). A zero would be read as a real
       measurement of nothing.
  
  2. TOKENIZED DIRECTIONS:
     - Rewrite directions using Fat Tokens: {{ingredient_id|original_text}}
     - Example: "Mix the flour" -> "Mix the {{ing_01|flour}}"
  
  3. PHASES:
     - If the raw recipe groups its ingredients or directions into phases,
       stages, or days (a bold heading entry such as "**Phase 1**", "**Day 1**",
       "**Soaker**"), keep every one of those headings as its own entry, in
       place, in both lists.
     - A heading is not an ingredient: give it no amount, no unit, and no fat
       tokens. Carry the heading text through as the entry's fallback_string
       (ingredients) or text (directions).
     - Do NOT flatten, merge, renumber, or drop a phase. The reader must still
       be able to tell where one session ends and the next begins.
  
  4. SOURCE SYSTEM:
     - "source_uom_system_detected": the measuring system the writer used, exactly one of "US",
       "UK", "EU", "AU", "Imperial", judged only from evidence in the RAW RECIPE or the SOURCE HOST:
         * a size the recipe states for a unit: "1 cup (240 ml)" or "(237 ml)" is US; "1 cup (250 ml)"
           is a metric cup (UK, EU or AU); "1 tbsp (20 ml)" is AU; "1 pint (568 ml)" or a 20 fl oz
           pint is Imperial;
         * the pre-metric British measures: "breakfast cup", "teacup" or "stone" as a measure, or "gill" when nothing points to the US, is Imperial; "dessertspoon" alone is not evidence (modern UK and Australian recipes still use it);
         * a statement about the measures ("Australian standard measures", "US cup measures");
         * the SOURCE HOST: .co.uk is UK, .com.au is AU, .co.nz is UK (New Zealand's measures are UK
           Metric's);
         * spelling and ingredient names only one country uses ("caster sugar", "plain flour" and
           "double cream" are UK; "all-purpose flour" and "heavy cream" are US).
       Grams printed beside cups are not evidence: American writers print them too.
     - "source_uom_system_evidence": the words you relied on, quoted exactly from the RAW RECIPE, or
       the SOURCE HOST exactly as given. One short quote.
     - Leave both null when nothing above applies.
  
  SOURCE HOST: none
  
  RAW RECIPE:
  name='Placeholder Cake' photo_filename='cake.jpg' servings='8' prep_time='20 mins' cook_time='35 mins' ingredients=['2 cups/250g plain flour', '1 cup sugar'] directions=['Mix everything.', 'Bake until done.'] notes=None categories=['EPUB Imports']
  
  '''
# ---
# name: TestPromptSnapshots.test_table_prompt
  '''
  The following text is from a recipe book and contains one or more ingredient tables
  where each ingredient name, its weight, its volume measure, and its baker's percentage
  appear on separate lines rather than in columns.
  
  Reformat ONLY the ingredient table sections so that each ingredient appears on a single
  line in the format: "IngredientName: weight (volume) — baker's%"
  
  Do NOT change any recipe titles, headings, method steps, notes, or any other text.
  Do NOT add or remove any ingredients or values.
  Preserve all [IMAGE: ...] markers exactly as they appear.
  
  Text:
  PLACEHOLDER CHUNK BODY — fixed text so the snapshot only moves when the template does.
  '''
# ---
# name: TestPromptSnapshots.test_toc_classify_prompt
  '''
  Given this list of table-of-contents entries from a cookbook, identify which ones are
  specific recipe or dish names (e.g. "Chocolate Chip Cookies", "Beef Stew", "Roast Chicken")
  vs section/chapter headers (e.g. "Soups", "Desserts", "Introduction", "Breakfast").
  
  Return JSON: {"recipe_indices": [0, 1, 3, 5, ...]} — the 0-based indices of entries that are recipe titles.
  Section headers like "Soups", "Desserts" should NOT be included. Only include entries that look like
  specific dish/recipe names.
  
  Entries (one per line):
  0. Soups
  1. Boiled Custard
  
  '''
# ---
# name: TestPromptSnapshots.test_toc_parse_prompt
  '''
  This text is from the table-of-contents or contents page of a recipe book.
  Extract the list of recipe/section titles in order. Include page numbers if they appear.
  
  Output JSON: {"entries": [{"title": "...", "page": <int or null>}, ...]}
  Use page: null when no page number is given.
  Include only substantive entries (skip "Contents", "Index", etc. if they are standalone headers).
  
  Text:
  Contents
  
  Soups .... 3
  '''
# ---
# name: TestSchemaSnapshots.test_cayenne_refinement_schema
  dict({
    '$defs': dict({
      'StructuredIngredient': dict({
        'properties': dict({
          'amount': dict({
            'anyOf': list([
              dict({
                'type': 'number',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "Numeric quantity, e.g. 1.5. null when the source states no amount ('salt to taste').",
            'title': 'Amount',
          }),
          'converted_amount': dict({
            'anyOf': list([
              dict({
                'type': 'number',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "The OTHER measure's amount: the writer's own second measure, or the AI's in grams or millilitres.",
            'title': 'Converted Amount',
          }),
          'converted_unit': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'The OTHER measure\'s unit: the writer\'s own, else "g" or "ml".',
            'title': 'Converted Unit',
          }),
          'fallback_string': dict({
            'description': 'Full original string, e.g., "1 1/2 cups flour".',
            'title': 'Fallback String',
            'type': 'string',
          }),
          'id': dict({
            'description': 'Unique ID for cross-linking, e.g., "ing_01"',
            'title': 'Id',
            'type': 'string',
          }),
          'is_ai_converted': dict({
            'default': False,
            'description': "True if the AI calculated the conversion; false for the writer's own second measure.",
            'title': 'Is Ai Converted',
            'type': 'boolean',
          }),
          'line_index': dict({
            'anyOf': list([
              dict({
                'type': 'integer',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': '0-based index of the raw ingredient line this entry was parsed from. Every ingredient line yields exactly one entry; section-header lines yield none. null only when the entry is not tied to a single line.',
            'title': 'Line Index',
          }),
          'name': dict({
            'description': 'Core name, e.g., "flour".',
            'title': 'Name',
            'type': 'string',
          }),
          'state': dict({
            'anyOf': list([
              dict({
                'enum': list([
                  'liquid',
                  'solid',
                ]),
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'Whether the ingredient is pourable as the recipe uses it (liquid) or not (solid). Stated before the conversion is computed, because the conversion depends on it (cookbook locales D13). null when the line has no amount or no volume/weight unit.',
            'title': 'State',
          }),
          'unit': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'Unit of measure, e.g., "cups".',
            'title': 'Unit',
          }),
        }),
        'required': list([
          'id',
          'name',
          'fallback_string',
        ]),
        'title': 'StructuredIngredient',
        'type': 'object',
      }),
      'TokenizedDirection': dict({
        'properties': dict({
          'step': dict({
            'description': '1-based step number.',
            'title': 'Step',
            'type': 'integer',
          }),
          'text': dict({
            'description': 'Direction text with Fat Tokens {{id|fallback}}.',
            'title': 'Text',
            'type': 'string',
          }),
        }),
        'required': list([
          'step',
          'text',
        ]),
        'title': 'TokenizedDirection',
        'type': 'object',
      }),
    }),
    'description': 'Internal refinement pass output.',
    'properties': dict({
      'base_servings': dict({
        'anyOf': list([
          dict({
            'type': 'integer',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'title': 'Base Servings',
      }),
      'grid_categories': dict({
        'description': "Multipolar categorization result. Keys are axis names (e.g. 'Cuisine'), values are lists of 0-2 matching tags from that axis. Return [] for any axis that does not apply — never hallucinate tags.",
        'title': 'Grid Categories',
        'type': 'object',
      }),
      'source_uom_system_detected': dict({
        'anyOf': list([
          dict({
            'type': 'string',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'default': None,
        'description': 'The measuring system the writer used: one of "US", "UK", "EU", "AU", "Imperial", judged only from evidence in the recipe or its source host. null when there is no evidence.',
        'title': 'Source Uom System Detected',
      }),
      'source_uom_system_evidence': dict({
        'anyOf': list([
          dict({
            'type': 'string',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'default': None,
        'description': 'The words that judgement rests on, quoted exactly from the recipe, or the source host exactly as given.',
        'title': 'Source Uom System Evidence',
      }),
      'structured_ingredients': dict({
        'items': dict({
          '$ref': '#/$defs/StructuredIngredient',
        }),
        'title': 'Structured Ingredients',
        'type': 'array',
      }),
      'title': dict({
        'title': 'Title',
        'type': 'string',
      }),
      'tokenized_directions': dict({
        'items': dict({
          '$ref': '#/$defs/TokenizedDirection',
        }),
        'title': 'Tokenized Directions',
        'type': 'array',
      }),
    }),
    'required': list([
      'title',
      'base_servings',
      'structured_ingredients',
      'tokenized_directions',
    ]),
    'title': 'CayenneRefinement',
    'type': 'object',
  })
# ---
# name: TestSchemaSnapshots.test_classify_schema
  dict({
    '$defs': dict({
      'ClassifiedItem': dict({
        'properties': dict({
          'aisle': dict({
            'enum': list([
              'produce',
              'meat_fish',
              'dairy_eggs',
              'bakery',
              'dry_goods',
              'spices',
              'condiments',
              'tins_jars',
              'frozen',
              'drinks',
              'household',
              'other',
            ]),
            'title': 'Aisle',
            'type': 'string',
          }),
          'count': dict({
            'anyOf': list([
              dict({
                'type': 'number',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'title': 'Count',
          }),
          'count_unit': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'title': 'Count Unit',
          }),
          'food': dict({
            'title': 'Food',
            'type': 'string',
          }),
          'key': dict({
            'title': 'Key',
            'type': 'string',
          }),
          'pantry': dict({
            'title': 'Pantry',
            'type': 'boolean',
          }),
        }),
        'required': list([
          'key',
          'food',
          'aisle',
          'pantry',
        ]),
        'title': 'ClassifiedItem',
        'type': 'object',
      }),
    }),
    'properties': dict({
      'items': dict({
        'items': dict({
          '$ref': '#/$defs/ClassifiedItem',
        }),
        'title': 'Items',
        'type': 'array',
      }),
    }),
    'required': list([
      'items',
    ]),
    'title': 'ClassifyReply',
    'type': 'object',
  })
# ---
# name: TestSchemaSnapshots.test_dynamic_grid_schema
  dict({
    '$defs': dict({
      'GridCategories': dict({
        'properties': dict({
          'Cuisine': dict({
            'description': 'Tags for the \'Cuisine\' axis, judged by the TAGGING RULES: usually one, at most two, [] when none is true of the dish as a whole. Choose only from this exact list: ["American", "British", "French", "Italian"]. Do NOT invent tags outside this list.',
            'items': dict({
              'type': 'string',
            }),
            'title': 'Cuisine',
            'type': 'array',
          }),
          'Meal Type': dict({
            'description': 'Tags for the \'Meal Type\' axis, judged by the TAGGING RULES: usually one, at most two, [] when none is true of the dish as a whole. Choose only from this exact list: ["Breakfast", "Dessert", "Dinner", "Bread"]. Do NOT invent tags outside this list.',
            'items': dict({
              'type': 'string',
            }),
            'title': 'Meal Type',
            'type': 'array',
          }),
        }),
        'title': 'GridCategories',
        'type': 'object',
      }),
      'StructuredIngredient': dict({
        'properties': dict({
          'amount': dict({
            'anyOf': list([
              dict({
                'type': 'number',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "Numeric quantity, e.g. 1.5. null when the source states no amount ('salt to taste').",
            'title': 'Amount',
          }),
          'converted_amount': dict({
            'anyOf': list([
              dict({
                'type': 'number',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "The OTHER measure's amount: the writer's own second measure, or the AI's in grams or millilitres.",
            'title': 'Converted Amount',
          }),
          'converted_unit': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'The OTHER measure\'s unit: the writer\'s own, else "g" or "ml".',
            'title': 'Converted Unit',
          }),
          'fallback_string': dict({
            'description': 'Full original string, e.g., "1 1/2 cups flour".',
            'title': 'Fallback String',
            'type': 'string',
          }),
          'id': dict({
            'description': 'Unique ID for cross-linking, e.g., "ing_01"',
            'title': 'Id',
            'type': 'string',
          }),
          'is_ai_converted': dict({
            'default': False,
            'description': "True if the AI calculated the conversion; false for the writer's own second measure.",
            'title': 'Is Ai Converted',
            'type': 'boolean',
          }),
          'line_index': dict({
            'anyOf': list([
              dict({
                'type': 'integer',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': '0-based index of the raw ingredient line this entry was parsed from. Every ingredient line yields exactly one entry; section-header lines yield none. null only when the entry is not tied to a single line.',
            'title': 'Line Index',
          }),
          'name': dict({
            'description': 'Core name, e.g., "flour".',
            'title': 'Name',
            'type': 'string',
          }),
          'state': dict({
            'anyOf': list([
              dict({
                'enum': list([
                  'liquid',
                  'solid',
                ]),
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'Whether the ingredient is pourable as the recipe uses it (liquid) or not (solid). Stated before the conversion is computed, because the conversion depends on it (cookbook locales D13). null when the line has no amount or no volume/weight unit.',
            'title': 'State',
          }),
          'unit': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'Unit of measure, e.g., "cups".',
            'title': 'Unit',
          }),
        }),
        'required': list([
          'id',
          'name',
          'fallback_string',
        ]),
        'title': 'StructuredIngredient',
        'type': 'object',
      }),
      'TokenizedDirection': dict({
        'properties': dict({
          'step': dict({
            'description': '1-based step number.',
            'title': 'Step',
            'type': 'integer',
          }),
          'text': dict({
            'description': 'Direction text with Fat Tokens {{id|fallback}}.',
            'title': 'Text',
            'type': 'string',
          }),
        }),
        'required': list([
          'step',
          'text',
        ]),
        'title': 'TokenizedDirection',
        'type': 'object',
      }),
    }),
    'properties': dict({
      'base_servings': dict({
        'anyOf': list([
          dict({
            'type': 'integer',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'title': 'Base Servings',
      }),
      'grid_categories': dict({
        '$ref': '#/$defs/GridCategories',
        'description': 'Multipolar categorization. For each axis, pick the tags the TAGGING RULES allow from the provided list: usually one, at most two. Return [] for axes where none fits.',
      }),
      'source_uom_system_detected': dict({
        'anyOf': list([
          dict({
            'type': 'string',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'default': None,
        'description': 'The measuring system the writer used: one of "US", "UK", "EU", "AU", "Imperial", judged only from evidence in the recipe or its source host. null when there is no evidence.',
        'title': 'Source Uom System Detected',
      }),
      'source_uom_system_evidence': dict({
        'anyOf': list([
          dict({
            'type': 'string',
          }),
          dict({
            'type': 'null',
          }),
        ]),
        'default': None,
        'description': 'The words that judgement rests on, quoted exactly from the recipe, or the source host exactly as given.',
        'title': 'Source Uom System Evidence',
      }),
      'structured_ingredients': dict({
        'items': dict({
          '$ref': '#/$defs/StructuredIngredient',
        }),
        'title': 'Structured Ingredients',
        'type': 'array',
      }),
      'title': dict({
        'title': 'Title',
        'type': 'string',
      }),
      'tokenized_directions': dict({
        'items': dict({
          '$ref': '#/$defs/TokenizedDirection',
        }),
        'title': 'Tokenized Directions',
        'type': 'array',
      }),
    }),
    'required': list([
      'title',
      'base_servings',
      'structured_ingredients',
      'tokenized_directions',
    ]),
    'title': 'CayenneRefinementWithGrid',
    'type': 'object',
  })
# ---
# name: TestSchemaSnapshots.test_recipe_list_schema
  dict({
    '$defs': dict({
      'RecipeExtraction': dict({
        'properties': dict({
          'byline': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "The recipe author's name when a byline is printed ('By Melissa Clark' gives 'Melissa Clark'). null when none is printed.",
            'title': 'Byline',
          }),
          'categories': dict({
            'description': 'Paprika taxonomy categories assigned by the categorisation pass.',
            'items': dict({
              'type': 'string',
            }),
            'title': 'Categories',
            'type': 'array',
          }),
          'cook_time': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "Cook time (e.g., '30 mins').",
            'title': 'Cook Time',
          }),
          'description': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "The headnote or introduction printed with the recipe, in the source's own words, at most one paragraph. null when there is none.",
            'title': 'Description',
          }),
          'directions': dict({
            'description': 'List of step-by-step cooking instructions.',
            'items': dict({
              'type': 'string',
            }),
            'title': 'Directions',
            'type': 'array',
          }),
          'ingredients': dict({
            'description': 'List of ingredients, each copied exactly as the source writes it. Convert unicode fractions to text fractions (e.g. ½ -> 1/2).',
            'items': dict({
              'type': 'string',
            }),
            'title': 'Ingredients',
            'type': 'array',
          }),
          'name': dict({
            'description': 'The name or title of the recipe.',
            'title': 'Name',
            'type': 'string',
          }),
          'notes': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'Any additional notes or headnotes from the author.',
            'title': 'Notes',
          }),
          'nutritional_info': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "The recipe's nutrition statement, verbatim, as one line ('572 calories; 19 grams fat; 35 grams protein'). null when the text carries none.",
            'title': 'Nutritional Info',
          }),
          'photo_filename': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'The filename of the hero/finished-dish photo for this recipe. If a [HERO IMAGE: filename] marker is present, always use that filename. Otherwise look for an [IMAGE: filename] marker that appears just before the recipe title/ingredients, or just after the last ingredient and before the first method step. Ignore images embedded within numbered method steps — those are process shots. If no suitable hero image is present, leave blank.',
            'title': 'Photo Filename',
          }),
          'prep_time': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "Preparation time (e.g., '15 mins').",
            'title': 'Prep Time',
          }),
          'servings': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "Number of servings (e.g., '4 servings', '2-4').",
            'title': 'Servings',
          }),
          'stated_source': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'The publication, website or book this text names as its own source, exactly as the text names it: a masthead, a book title, a site name. Never the name of an AI model or a tool. null when the text does not say.',
            'title': 'Stated Source',
          }),
          'total_time': dict({
            'anyOf': list([
              dict({
                'type': 'string',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': "The total or overall time when the text states one ('Total Time 8 to 10 hours, plus refrigeration'). Never the sum of prep and cook. null when the text states no total.",
            'title': 'Total Time',
          }),
        }),
        'required': list([
          'name',
          'ingredients',
          'directions',
        ]),
        'title': 'RecipeExtraction',
        'type': 'object',
      }),
    }),
    'properties': dict({
      'recipes': dict({
        'description': 'A list of all distinct recipes found in the text chunk.',
        'items': dict({
          '$ref': '#/$defs/RecipeExtraction',
        }),
        'title': 'Recipes',
        'type': 'array',
      }),
    }),
    'required': list([
      'recipes',
    ]),
    'title': 'RecipeList',
    'type': 'object',
  })
# ---
# name: TestSchemaSnapshots.test_toc_classification_schema
  dict({
    'description': 'Result of classifying which TOC entries are recipe titles vs section headers.',
    'properties': dict({
      'recipe_indices': dict({
        'description': '0-based indices of TOC entries that are specific recipe/dish names, not section headers.',
        'items': dict({
          'type': 'integer',
        }),
        'title': 'Recipe Indices',
        'type': 'array',
      }),
    }),
    'required': list([
      'recipe_indices',
    ]),
    'title': 'TocRecipeClassification',
    'type': 'object',
  })
# ---
# name: TestSchemaSnapshots.test_toc_list_schema
  dict({
    '$defs': dict({
      'TocEntry': dict({
        'description': 'Single TOC entry: recipe title and optional page/section reference.',
        'properties': dict({
          'page': dict({
            'anyOf': list([
              dict({
                'type': 'integer',
              }),
              dict({
                'type': 'null',
              }),
            ]),
            'default': None,
            'description': 'Page number (1-based) if known; null otherwise.',
            'title': 'Page',
          }),
          'title': dict({
            'description': 'The recipe or section title.',
            'title': 'Title',
            'type': 'string',
          }),
        }),
        'required': list([
          'title',
        ]),
        'title': 'TocEntry',
        'type': 'object',
      }),
    }),
    'description': 'Parsed table of contents from a cookbook.',
    'properties': dict({
      'entries': dict({
        'description': 'Ordered list of TOC entries (recipe titles and optional page numbers).',
        'items': dict({
          '$ref': '#/$defs/TocEntry',
        }),
        'title': 'Entries',
        'type': 'array',
      }),
    }),
    'required': list([
      'entries',
    ]),
    'title': 'TocList',
    'type': 'object',
  })
# ---
